# convertible

./: pyproject.toml
convertible/: __init__.py  convert.py  ignore_self.py
convertible/Convert/: Convert.py  NextArgumentException.py  RejectArgumentException.py  __init__.py
convertible/Convert/ConvertHandler/: ConvertHandler.py  Iterable.py  NewConvertHandler.py  __init__.py  convert_handler.py
convertible/Convert/ConvertHandler/FunctionHandler/: ConvertArgument.py  ConvertibleArgument.py  ConvertibleCallable.py  FunctionArgumentHandler.py  FunctionHandler.py  FunctionIterator.py  FunctionKeywordArgumentHandler.py  __init__.py
convertible/Convert/ExceptionHandler/: ConvertException.py  ExceptionHandler.py  __init__.py
convertible/Convertible/: Convertible.py  Greedy.py  Ignore.py  Optional.py  __init__.py
tests/: test_convert.py  test_greedy.py  test_ignore_self.py  test_imports.py  test_optional.py
