[tool.poetry]
name = "convertible"
version = "0.0.1"
description = "Convert Arguments Automatically"
authors = ["TheJoeSmo <joesmo.joesmo12@gmail.com>"]
license = "MIT"
keywords = ["convertible"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
